# pyhydrophone

./: .gitignore  .readthedocs.yaml  README.md  justfile  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: requirements.txt
docs/source/: conf.py  contents.rst  data_structures.rst  index.rst  install.rst  quickstart.rst  reference.rst
examples/: README.rst  init_hydro.py  plot_freq_calibration.py  rtsys_example.py  soundtrap_hf.py
pyhydrophone/: __init__.py  amar.py  bruelkjaer.py  ears.py  hydrophone.py  hydrophone_file.py  icListen.py  mte.py  rtsys.py  seiche.py  soundtrap.py  uaural.py  upam.py
pyhydrophone/calibration/soundtrap/: 5396.ini  67416073.ini  738496579.ini
tests/: test_new_objects.py  test_rtsys.py  test_soundtrap.py
tests/test_data/rtsys/: SN130.csv  board_2021-10-11_13-11-09.txt
tests/test_data/soundtrap/: 67416073.210610033655.accel.csv  67416073.210610033655.bcl  67416073.210610033655.log.xml  67416073.210610033655.temp.csv  67416073.210610034155.accel.csv  67416073.210610034155.bcl  67416073.210610034155.log.xml  67416073.210610034155.temp.csv  67416073.210610034655.accel.csv  67416073.210610034655.bcl  67416073.210610034655.log.xml  67416073.210610034655.temp.csv
