[tool.poetry]
name = "pyhydrophone"
version = "0.2.0"
description = "python package to read and calibrate hydrophone data"
authors = ["Clea Parcerisas <clea.parcerisas@vliz.be>"]
license = "OSI Approved :: MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13.0"
pandas = "^2.0.2"
requests = "^2.31.0"
soundfile = "^0.12.1"
openpyxl = "^3.1.2"
scipy = "1.13.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pyyaml = "^6.0"
pytest = "^7.3.1"
coverage = "^7.2.5"
python-dotenv = "^1.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = {version =">=7.2.6", python = ">=3.11"}
sphinx-rtd-theme = ">=1.3.0"
m2r = ">=0.2"
docutils = ">=0.20"
sphinx-copybutton = ">=0.5.2"
ipykernel = "^6.29.5"
sphinx-gallery = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests",]
pythonpath = ["."]
