[metadata]
name = pyhydrophone
version = 0.1.6
author = Clea Parcerisas
author_email = clea.parcerisas@vliz.be
description = Python scripts to read hydrophones files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lifewatch/pyhydrophone
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where = pyhydrophone